updated colors, texts and social media links

--- a/partials/footer-socialmedia.hbs
+++ b/partials/footer-socialmedia.hbs
@@ -1,11 +1,9 @@
 <!-- Start of Social Media Links -->
 	
 	<div id="social-share" class="social-share">
-		<span id="youtube-page"></span>	
-		<span id="instagram-page"></span>
-		<span id="twitter-page"></span>
-		<span id="googleplus-page"></span>					
-		<span id="facebook-page"></span>
+		<span id="instagram-page">https://www.instagram.com/travelnziza/</span>
+		<span id="twitter-page">https://www.twitter.com/travelnziza</span>
+		<span id="facebook-page">https://web.facebook.com/travelnziza</span>
 		<a href="{{@blog.url}}/rss/" class="rss-subscribe" target="_blank"><i class="fa fa-rss"></i></a>
 	</div>
 	
