--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,15 +1,11 @@
-<!-- Start of Newsletter Widget -->
 
-{{> widget-newsletter}}
-
-<!-- End of Newsletter Widget -->
 
 <footer>
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
 				<div class="footer-links">
-					<p>&copy; {{date format="YYYY"}} <a href="{{@blog.url}}">{{@blog.title}}</a>. All right Reserved - Powered by <a href="http://ghost.org" target="blank">Ghost</a></p>
+					<p>Made with &#x2764; in Kagugu, Kigali. - Powered by <a href="http://ghost.org" target="blank">Ghost</a> using the <a href="https://github.com/josepcasas/nziza" target="blank"> Nziza theme</a></p> 
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6">
