--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -2,8 +2,7 @@
 	<div class="cp-sidebar">
 		{{> widget-editorspick}}
 		{{> widget-sidebarad}}
-		{{> widget-podcasts}}
-		{{> widget-facebook}}
-		{{> widget-contacts}}
+		{{> widget-newsletter}}
+		{{> widget-sidenewsletter}}
 	</div>
 </aside>
