--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ p{
 }
 
 blockquote {
-  border-color: #rgba(91, 155, 2013, 1);;
+  border-color: rgba(91, 155, 2013, 0.8);
   background: #f7f7f7;
 }
 
@@ -265,7 +265,7 @@ cite {
 /* ------- buttons ------- */
 
 .btn-primary {
-    background-color: rgba(254,0,0,0.75);
+    background-color: rgba(91, 155, 2013, 0.8);
     color: #fff;
     border: solid 1px #fe0000;
 	border-radius: 0;
@@ -805,7 +805,7 @@ h6 a:hover {
 }
 
 .ep-content-overlay:hover {
-	background-color: rgba(254,0,0,0.5);
+	background-color: rgba(91, 155, 2013, 0.8);
 }
 
 #cp-contacts {
@@ -951,7 +951,7 @@ footer .social-share a i {
     position: fixed;
     right: 30px;
     bottom: 0;
-    background: rgba(254, 0, 0, 0.75);
+    background: rgba(91, 155, 2013, 0.8);
     color: #ffffff;
     text-align: center;
     z-index: 10;
@@ -965,7 +965,7 @@ footer .social-share a i {
 }
 
 #ScrollToTop:hover {
-    background: rgba(254 0, 0, 1);
+    background: rgba(91, 155, 2013, 0.8);
 }
 
 #ScrollToTop i {
