--- a/partials/widget-contacts.hbs
+++ b/partials/widget-contacts.hbs
@@ -2,9 +2,7 @@
 <section  id="cp-contacts"  class="widget">
 	<span><h5>Contacts</h5></span>
 	<div class="cp-contacts">
-		<p>Coding from Java Restaurant, The Junction, Ngong Road, Nairobi, Kenya. Heavily caffeinated. Call me an Uber.</p>
-		<p class="sidebar-phone"><i class="fa fa-phone"></i><a href="tel:+254712345678">+254 (0) 7123 456 78</a></p>
-		<p class="sidebar-email"><i class="fa fa-envelope-o"></i><a href="mailto:hey@chopstick.io">hey@chopstick.io</a></p>
+		<p>Made with love in Kigali, Rwanda. Send us an email at <p class="sidebar-email"><i class="fa fa-envelope-o"></i><a href="mailto:hello@travelnziza.com">hello@travelnziza.com</a></p>
 	</div>
 </section>
 <!-- end widget -->
