--- a/partials/widget-editorspick.hbs
+++ b/partials/widget-editorspick.hbs
@@ -1,8 +1,8 @@
 <!-- start widget -->
 <section class="widget">
-	<span><h5>Murakaza neza</h5></span>
+	<span><h5>Murakaza neza!</h5></span>
 	<div id="editors-pick" class="editors-pick">
-		Welcome to Travel Nziza! This website aims to promote the tourism in Rwanda and the East African region. This is a test.
+		Welcome to Travel Nziza! Your ultimate DIY guide to tourism in Rwanda. Here you will find itineraries, how to get around, places to stay... So much more than gorillas!
 	</div>
 </section>
 <!-- end widget -->
