updated social media and newsletter

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -9,7 +9,12 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6">
-				{{> footer-socialmedia}}
+				<div id="social-share" class="social-share">
+					<span id="instagram-page">https://www.instagram.com/travelnziza/</span>
+					<span id="twitter-page">https://www.twitter.com/travelnziza</span>
+					<span id="facebook-page">https://web.facebook.com/travelnziza</span>
+					<a href="{{@blog.url}}/rss/" class="rss-subscribe" target="_blank"><i class="fa fa-rss"></i></a>
+				</div>
 			</div>
 		</div>
 	</div>
