--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,4 @@
 
-
 <footer>
 	<div class="container">
 		<div class="row">
@@ -9,12 +8,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6">
-				<div id="social-share" class="social-share">
-					<span id="instagram-page">https://www.instagram.com/travelnziza/</span>
-					<span id="twitter-page">https://www.twitter.com/travelnziza</span>
-					<span id="facebook-page">https://web.facebook.com/travelnziza</span>
-					<a href="{{@blog.url}}/rss/" class="rss-subscribe" target="_blank"><i class="fa fa-rss"></i></a>
-				</div>
+				{{> footer-socialmedia}}
 			</div>
 		</div>
 	</div>
