--- a/partials/widget-sidenewsletter.hbs
+++ b/partials/widget-sidenewsletter.hbs
@@ -2,20 +2,38 @@
 <section  id="cp-contacts"  class="widget">
 	<span><h5>Contacts</h5></span>
 	<div class="cp-contacts">
-	<!-- Begin MailChimp Signup Form -->
-<div id="mc_embed_signup">
-<form action="//travelnziza.us13.list-manage.com/subscribe/post?u=588778867a353e5b3f289ff4c&amp;id=e7df68fceb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe to our newsletter to receive monthly updates!</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_588778867a353e5b3f289ff4c_e7df68fceb" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+
+
+
+		<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+		<style type="text/css">
+			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:400px;}
+		</style>
+
+		<div id="mc_embed_signup">
+
+		<form action="//travelnziza.us13.list-manage.com/subscribe/post?u=588778867a353e5b3f289ff4c&amp;id=e7df68fceb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+    	<div id="mc_embed_signup_scroll">
+
+		<label for="mce-EMAIL">Subscribe to our newsletter to receive monthly updates!</label>
+
+		<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+   
+
+   		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+    	<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_588778867a353e5b3f289ff4c_e7df68fceb" tabindex="-1" value=""></div>
+
+    	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    	
     </div>
 </form>
 </div>
 
 <!--End mc_embed_signup-->
+
+
 
 	</div>
 </section>
