final update social media and newsletter

--- a/partials/config.hbs
+++ b/partials/config.hbs
@@ -11,14 +11,14 @@ var editors_tag_post_count = 5;
 var fb_page_url = 'https://www.facebook.com/xplorato';
 
 {{! Mailchimp Settings }}
-var mcform_url = 'http://kagai.us11.list-manage1.com/subscribe?u=95bc93fe25d1f1c5335c6d447&id=7fa2a51c5c';
+var mcform_url = 'http://travelnziza.us13.list-manage.com/subscribe/post?u=588778867a353e5b3f289ff4c&amp;id=e7df68fceb';
 var msg_success = 'Please check your inbox to activate your subscription. Thanks!';
 
 {{! Footer Social Media Link Settings }}
 var cp_youtube = 'https://www.youtube.com/';
-var cp_instagram = 'https://instagram.com/';
-var cp_twitter = 'https://twitter.com/kagaim';
+var cp_instagram = 'https://www.instagram.com/travelnziza';
+var cp_twitter = 'https://www.twitter.com/travelnziza';
 var cp_googleplus = 'https://plus.google.com/+xplorato';
-var cp_facebook = 'https://www.facebook.com/xplorato';
+var cp_facebook = 'https://web.facebook.com/travelnziza';
 
 </script>
