--- a/partials/footer-socialmedia.hbs
+++ b/partials/footer-socialmedia.hbs
@@ -1,4 +1,9 @@
-<!-- Start of Social Media Links -->
+	<div id="social-share" class="social-share">
+		<span id="instagram-page"></span>
+		<span id="twitter-page"></span>
+		<span id="facebook-page"></span>
+		<a href="{{@blog.url}}/rss/" class="rss-subscribe" target="_blank"><i class="fa fa-rss"></i></a>
+	</div><!-- Start of Social Media Links -->
 	
 
 	
