updated sidebar and newsletter

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,3 +1,8 @@
+<!-- Start of Newsletter Widget -->
+
+{{> widget-newsletter}}
+
+<!-- End of Newsletter Widget -->
 
 <footer>
 	<div class="container">
