--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,6 +1,7 @@
 <aside class="col-xs-12 col-md-4">
 	<div class="cp-sidebar">
 		{{> widget-editorspick}}
-		{{> widget-sidenewsletter}}
+		{{> widget-start}}
+		{{> widget-contacts}}
 	</div>
 </aside>
