--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,6 +1,6 @@
 <!-- Start of Newsletter Widget -->
 
-{{> widget-newsletter}}
+<!-- {{> widget-newsletter}} -->
 
 <!-- End of Newsletter Widget -->
 
