--- a/partials/widget-contacts.hbs
+++ b/partials/widget-contacts.hbs
@@ -2,7 +2,7 @@
 <section  id="cp-contacts"  class="widget">
 	<span><h5>Contacts</h5></span>
 	<div class="cp-contacts">
-		<p>Made with love in Kigali, Rwanda. Send us an email at <p class="sidebar-email"><i class="fa fa-envelope-o"></i><a href="mailto:hello@travelnziza.com">hello@travelnziza.com</a></p>
+		<p>Send us an email at <p class="sidebar-email"><i class="fa fa-envelope-o"></i><a href="mailto:hello@travelnziza.com">hello@travelnziza.com</a></p>
 	</div>
 </section>
 <!-- end widget -->
