--- a/partials/widget-editorspick.hbs
+++ b/partials/widget-editorspick.hbs
@@ -2,7 +2,7 @@
 <section class="widget">
 	<span><h5>Murakaza neza!</h5></span>
 	<div id="editors-pick" class="editors-pick">
-		Welcome to Travel Nziza! Your ultimate DIY guide to tourism in Rwanda. Here you will find itineraries, how to get around, places to stay... So much more than gorillas!
+		Welcome to Travel Nziza! Your ultimate DIY guide to tourism in Rwanda. Here you will find itineraries, places to stay, tips... So much more than gorillas!
 	</div>
 </section>
 <!-- end widget -->
