--- a/partials/widget-start.hbs
+++ b/partials/widget-start.hbs
@@ -2,6 +2,7 @@
 <section class="widget">
 	<span><h5>Start here</h5></span>
 	<div id="editors-pick" class="editors-pick">
+		<a href="#"><img src="http://i.imgur.com/1P7Va3Y.jpg"></a>
 	</div>
 </section>
 <!-- end widget -->
