--- a/partials/widget-start.hbs
+++ b/partials/widget-start.hbs
@@ -2,7 +2,7 @@
 <section class="widget">
 	<span><h5>Start here</h5></span>
 	<div id="editors-pick" class="editors-pick">
-		<a href="http://www.travelnziza.com/rwanda"><img src="http://i.imgur.com/xbgG7MI.jpg"></a>
+		<a href="http://www.travelnziza.com/rwanda"><img src="http://i.imgur.com/xbgG7MI.jpg"></a> <br> <br>
 		<a href="#"><img src="http://i.imgur.com/1P7Va3Y.jpg"></a>
 	</div>
 </section>
